--- a/style.css
+++ b/style.css
@@ -129,8 +129,16 @@ h4 i {
     display: block;
 }
 
-.weather-icon img{
+/* 날씨 아이콘*/
+span img {
     width: 30px;
+    height: 30px;
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 50%;
+    padding: 4px 4px;
+    position: fixed;
+    top: 10px;
+    border :dotted 2px #a1a1a1;
 }
 
 /* 배경 */
