--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     box-sizing: border-box;
+    margin:0
     width: 100%;
+    height: 100%;
 }
 input {
     width: 200px;
@@ -9,9 +11,13 @@ input {
     border: 0;
     border-radius: 15px;
     outline: none;
-    padding-left: 12px;
+    padding-left: 14px;
     background-color: rgb(233, 233, 233);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.clock-name input {
+    width: 170px;
 }
 
 ul {
@@ -71,7 +77,7 @@ li i {
 li i:hover {
     scale: 1.1;
     color:rgb(231, 72, 104);
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
 h1, h4{
@@ -148,27 +154,45 @@ span img {
 /* 리셋 버튼 */
 .js-reset-btn {
     position: fixed;
-    right: 10px;
-    bottom: 10px;
-  align-items: center;
-  background: (255, 255, 255, 0.7);
-  border: 0 solid #E2E8F0;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  /* display: inline-flex; */
-  font-size: 24px;
-  height: 56px;
-  /* justify-content: center; */
-  /* line-height: 24px; */
-  /* overflow-wrap: break-word; */
-  padding: 24px;
-  width: 50px;
-  height: 15px;
-  border-radius: 14px;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+    right: 20px;
+    bottom: 20px;
+    align-items: center;
+    background: (255, 255, 255, 0.7);
+    border: 0 solid #fff;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    display: inline-flex;
+    font-size: 24px;
+    height: 56px;
+    justify-content: center;
+    line-height: 24px;
+    overflow-wrap: break-word;
+    padding: 24px;
+    width: 50px;
+    height: 15px;
+    border-radius: 14px;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
+
+.js-reset-btn:hover {
+    scale: 1.1;
+    transition: all 0.5s;
+}
+
+.js-reset-btn i {
+    position: absolute;
+    top: 13px;
+    left: 14px; 
+}
+
+.js-reset-btn i:hover {
+    color:rgb(54, 121, 237);
+    scale: 1.1;
+    transition: all 0.5s;
+}
+    
 
 
 /* 배경 */
@@ -209,7 +233,7 @@ span img {
         height: 50px;
         position: fixed;
         top: 10px;
-        right: 10px;
+        right: 15px;
     }
 
     .clock-name {
@@ -236,4 +260,24 @@ span img {
         margin: 0;
         color: rgb(54, 121, 237);
     }
+
+    .clock-name input {
+        width: 200px;
+        height: 34px;
+    }
+
+    .js-toDoForm input {
+        width: 250px;
+        height: 40px;
+        border-radius: 20px;
+        padding-left: 20px;
+    }
+
+    ul li {
+        list-style: none;
+        width: 250px;
+        height: 22px;
+        
+    }
+    
 }
